--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+body{
+    background-color: #FFFFFF;
+    /* background-image: linear-gradient(180deg, #FFFFFF 0%, #6284FF 50%, #FF0000 100%); */
+    background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
+    background-size: cover;
+    /* background-image: url(../Assests/Images/Background.jpg) ; */
+    height: 90rem;  
+    background-repeat: no-repeat;
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    cursor: url(../Assests/Images/cursor.png), auto;
+}
+
 #grid{
     display: grid;
     flex-wrap: wrap;
@@ -17,6 +33,7 @@
     margin-top: 6rem;
     margin-right: 10rem;
     margin-left: 0rem;
+    
     /* width: 100%; */
     /* max-width: 600px; */
 }
@@ -24,6 +41,7 @@
     background-size: contain;
     max-width: 150px;
     max-height: 150px;
+    border-radius: 20px;
 }
 /* #found {
     background-color: #9ad89af3;
